--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -2,7 +2,6 @@
 * {
   margin: 0;
   padding: 0;
-  /* background-color: #c9ced3; */
   font-family: 'Poppins', sans-serif;
   box-sizing: border-box;
 }
@@ -18,83 +17,31 @@ body {
   margin: auto;
   padding-top: 20px;
 }
+.SectionLabels {
+  margin-top: 10px;
+  margin-left: 30px;
+  color: rgba(32, 32, 32, 0.753);
+}
+.SectionLabelsSkill {
+  color: rgba(32, 32, 32, 0.753);
+  margin-left: -5px;
+}
 hr {
   margin: 0 auto;
   width: 95%;
 }
-.EditIcon {
+.EditIcon,
+.addIcon {
   height: 15px;
   width: 15px;
   cursor: pointer;
 }
-.GeneralInfo {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
+.addIcon:hover {
+  transform: scale(1.5);
+  filter: invert(37%) sepia(94%) saturate(1462%) hue-rotate(166deg)
+    brightness(101%) contrast(101%);
 }
-.GeneralInfoPreview {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+textarea {
+  width: 500px;
+  height: 100px;
 }
-.GeneralInfoPreview:hover > button {
-  visibility: visible;
-}
-.GeneralInfoPreview > button {
-  visibility: hidden;
-}
-.Education {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-}
-/* .EducationPreview:hover > button {
-  visibility: visible;
-}
-.EducationPreview > button {
-  visibility: hidden;
-} */
-.EducationPreview {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-}
-.Experience {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-}
-.ExperiencePreview {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  width: 100%;
-}
-/* .ExperiencePreview:hover > button {
-  visibility: visible;
-}
-.ExperiencePreview > button {
-  visibility: hidden;
-} */
-.Skills {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
-}
-.SkillsPreview {
-  display: flex;
-  flex-wrap: nowrap;
-  align-items: center;
-  justify-content: space-evenly;
-}
-/* .SkillsPreview:hover > button {
-  visibility: visible;
-}
-.SkillsPreview > button {
-  visibility: hidden;
-} */
