--- a/src/styles/Skills.css
+++ b/src/styles/Skills.css
@@ -25,3 +25,24 @@
   filter: invert(37%) sepia(94%) saturate(1462%) hue-rotate(166deg)
     brightness(101%) contrast(101%);
 }
+.Submit-btn {
+  display: flex;
+  margin: 0 auto;
+  border: none;
+  background: #404040;
+  color: #ffffff !important;
+  font-weight: 100;
+  padding: 5px;
+  text-transform: uppercase;
+  border-radius: 6px;
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+}
+.Submit-btn:hover {
+  color: #404040 !important;
+  font-weight: 500 !important;
+  letter-spacing: 2px;
+  background: #dbdbdb;
+  box-shadow: 0px 5px 40px -10px rgba(0, 0, 0, 0.57);
+  transition: all 0.3s ease 0s;
+}
