--- a/src/components/styles/App.css
+++ b/src/components/styles/App.css
@@ -20,6 +20,12 @@ body {
   text-align: center;
 }
 
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
 button,
 input,
 textarea {
@@ -28,6 +34,10 @@ textarea {
   color: inherit;
   font-family: inherit;
   font-size: inherit;
+}
+
+textarea {
+  vertical-align: top;
 }
 
 @media only screen and (min-width: 900px) {
